--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <li><a href="admin.html">Admin</a></li>
         </ul>
     </nav>
+    <div class="logo-container">
+        <img src="ORD LOGO REVERSE RED RGB.png" alt="Logo" class="logo">
+    </div>
     <h1>Prize Draw</h1>
     <div>
         <label for="codeInput">Enter your 4-digit code:</label>
