--- a/admin.html
+++ b/admin.html
@@ -9,7 +9,9 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Player</a></li>
+            <li><a href="index.html">ORD</a></li>
+            <li><a href="rehab.html">Rehab</a></li>
+            <li><a href="livebig.html">LiveBig</a></li>
             <li><a href="admin.html">Admin</a></li>
         </ul>
     </nav>
