--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Prize Draw - Player</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="ord">
     <nav>
         <ul>
-            <li><a href="index.html">Player</a></li>
+            <li><a href="index.html">ORD</a></li>
+            <li><a href="rehab.html">Rehab</a></li>
+            <li><a  href="livebig.html">LiveBig</a></li>
             <li><a href="admin.html">Admin</a></li>
         </ul>
     </nav>
