--- a/rehab.html
+++ b/rehab.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="index.html">OneRedDoor</a></li>
             <li><a href="rehab.html">Rehab</a></li>
+            <li><a href="livebig.html">LiveBig</a></li>
             <li><a href="admin.html">Admin</a></li>
         </ul>
     </nav>
