--- a/livebig.html
+++ b/livebig.html
@@ -29,7 +29,7 @@
     </div>
     <div id="resultMessage"></div>
     <div class="logo-container">
-        <img src="LiveBig Logo.png" width="25%" alt="Logo" class="logo">
+        <img src="LIVEBIG LOGO TAG REV.png" width="25%" alt="Logo" class="logo">
     </div>
     <script src="script.js"></script>
 </body>
