--- a/admin.html
+++ b/admin.html
@@ -6,7 +6,7 @@
     <title>Prize Draw - Admin</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="admin">
     <nav>
         <ul>
             <li><a href="index.html">ORD</a></li>
