--- a/rehab.html
+++ b/rehab.html
@@ -29,7 +29,7 @@
     </div>
     <div id="resultMessage"></div>
     <div class="logo-container">
-        <img src="AddCare LOGO NO_TAG REV.png" width="25%" alt="Logo" class="logo">
+        <img src="RM LOGO TAG REV.png" width="25%" alt="Logo" class="logo">
     </div>
     <script src="script.js"></script>
 </body>
